k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cuy-peru
  labels:
    app.kubernetes.io/part-of: cuy-peru
